Try to fix: Init overlay glitching on mobile
Close #694

--- a/Tekst-Web/src/assets/main.css
+++ b/Tekst-Web/src/assets/main.css
@@ -1,4 +1,5 @@
 html {
+  overflow-x: hidden;
   overflow-y: scroll;
   box-sizing: border-box;
   margin: 0;
@@ -6,9 +7,14 @@ html {
 }
 
 body {
+  max-width: 100vw;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#app {
+  max-width: 100%;
 }
 
 ::selection {
